# RustOS

./: .gitignore  Cargo.toml  README.md  run.sh  setup.sh
.cargo/: config.toml
src/: allocator.rs  disk.rs  fat.rs  gdt.rs  interrupts.rs  interrupts_BACKUP_1951.rs  lib.rs  main.rs  memory.rs  printfunc.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/cargo/: config.toml
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
