[package]
name = "RustOS"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0" #<-- interface UART pour communiquer avec le port série, pour envoyer les données de notre kernel à notre host

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]

[profile.release]

[[bin]]
name = "RustOS"
test = true
bench = false

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300 #<-- temps avant lequel la console/QEMU se ferme pour éviter les boucles infini

[[test]]
name = "should_panic"
harness = false